[FIX] base,web,website: post-audit qweb/assets/sass hardening
Squashed post-audit fixes:
- restore configmanager.pop() for web database creation
- don't reject parent.* domains in standalone view validation
- ir.qweb hardening: breaker, asset nodes, t-call slot, stop mutating
  ormcached asset nodes, rendering + ESM asset pipeline
- compile frontend assets under Dart Sass; close compiler on stop;
  invalidate assets cache on asset-bundle attachment unlink
- externalize /web/static/lib esbuild imports + Chart ESM facade
- website unique-key domain via Domain API; machine_doc_v1
- SCSS tidy, FontAwesome 7 icon centering, calendar tint-color

Task ID: 22655

--- a/addons/web/static/src/components/file_viewer/file_viewer.scss
+++ b/addons/web/static/src/components/file_viewer/file_viewer.scss
@@ -9,7 +9,7 @@
 }
 
 .o-FileViewer-header {
-    color: #fff;
+    color: $white;
     background-color: var(--FileViewer-toolbarBgColor, #{$o-gray-800});
     height: $o-navbar-height;
 }
@@ -30,7 +30,7 @@
 
 .o-FileViewer-toolbarButton {
     background-color: var(--FileViewer-toolbarBgColor, #{$o-gray-800});
-    color: #fff;
+    color: $white;
 
     &:hover {
         filter: brightness(1.3);
@@ -38,8 +38,8 @@
 }
 
 .o-FileViewer-view {
-    background-color: #000000;
-    box-shadow: 0 0 40px #000000;
+    background-color: $black;
+    box-shadow: 0 0 40px $black;
     outline: none;
 
     &.o-isText {
