--- a/addons/web/static/src/views/calendar/calendar_renderer.scss
+++ b/addons/web/static/src/views/calendar/calendar_renderer.scss
@@ -11,7 +11,7 @@
     // Simulate the old UI (FC v4)
     // the resizer on the bottom of the event styled with a = icon when hovered
     .fc-timegrid-event .fc-event-resizer {
-        color: #fff;
+        color: $white;
         text-align: center;
         font-family: monospace;
     }
@@ -702,7 +702,7 @@
 // ===============  Generate color classes ===============
 @for $i from 1 through length($o-colors-complete) {
     $color: nth($o-colors-complete, $i);
-    $color-subtle: mix($o-white, $color, 55%);
+    $color-subtle: tint-color($color, 55%);
 
     .o_calendar_renderer {
         .o_calendar_color_#{$i - 1} {
